force-app/main/default/objects/billing__c/billing__c.object-meta.xml
<CustomObject>
    <label>billing</label>
    <nameField>
        <label>billing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>