force-app/main/default/objects/billing__c/fields/AgencyCheckbox__c.field-meta.xml
<CustomField>
    <fullName>AgencyCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AgencyCheckbox</label>
    <type>Checkbox</type>
</CustomField>