force-app/main/default/objects/billing__c/fields/overide__c.field-meta.xml
<CustomField>
    <fullName>overide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>overide</label>
    <type>Checkbox</type>
</CustomField>