force-app/main/default/objects/billing__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Billings (Program)</relationshipLabel>
    <relationshipName>Billings1</relationshipName>
    <type>Lookup</type>
</CustomField>