force-app/main/default/objects/billing__c/fields/Rev_Sou__c.field-meta.xml
<CustomField>
    <fullName>Rev_Sou__c</fullName>
    <label>Rev Sou</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ven</fullName>
            </value>
            <value>
                <fullName>Agn</fullName>
            </value>
            <value>
                <fullName>Non end</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>