force-app/main/default/objects/billing__c/fields/Rev_Type__c.field-meta.xml
<CustomField>
    <fullName>Rev_Type__c</fullName>
    <label>Rev Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Rev_Sou__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad R</fullName>
            </value>
            <value>
                <fullName>Dir</fullName>
            </value>
            <value>
                <fullName>Ven I</fullName>
            </value>
            <value>
                <fullName>non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>